<resources>
    <string name="app_name">Blood Aid</string>

    <string name="password_error_text">Phone or Password is not correct!</string>
    <string name="adminLogintxt">Administration Login</string>
    <string name="adminAddContent">Add New User</string>
    <string name="admin_name">Tamzid hasan nahid</string>
    <string name="adminHome_status">Administrator</string>
    <string name="todo">TODO</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="donar_add_text">Donar</string>
    <string name="org_add_text">Organization</string>
    <string name="hospital_add_text">Hospital</string>
    <string name="ambulance_add_text">Ambulance</string>
    <string name="top_donar_text">Top Donor</string>
    <string name="facts_text">Facts</string>
    <string name="history_text">History</string>
    <string name="app_info_text">App Info</string>
    <string name="reason_text">Why do he/she need blood ?</string>
    <string name="popupDelete_details">Are you sure to delete ?</string>
    <string name="popupDelete_delete">Delete</string>
    <string name="popupneutral_title">Donor Request</string>
    <string name="popupNeutral_message">What do you want ?</string>
    <string name="popupNeutral_acceptButton">Accept</string>
    <string name="recyclerViewAmbulance_email">Email :</string>
    <string name="recyclerViewAmbulance_details">Details :</string>
    <string name="random">  open - 7 am\n
                            close - 10 pm\n
                            contact me!!</string>
    <string name="recycleViewAdminReport_reportCount">Report Count :</string>
    <string name="popupReport_details">What do you want to do ?</string>
    <string name="popupReport_removetextView">Remove ID</string>
    <string name="popupReport_deletetextView">Delete ID</string>

    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="userProfile_updateText">To UPDATE data please click the desire one !</string>
    <string name="popupUpdateTextview_UpdateWarning">Update !</string>
    <string name="popupUpdateTextview_oldData">Old Data :</string>
    <string name="popup_cancelText">Cancel</string>
    <string name="google_maps_key">AIzaSyCusRpk1DQTRmwmeyaARda6MsXv8EVGzD0</string>

    <string-array name="blood_items">
        <item>Choose Blood Group</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="district_items">
        <item>Choose District</item>
        <item>Dhaka</item>
        <item>Khulna</item>
        <item>Rajshahi</item>
        <item>Borishal</item>
        <item>Chittagong</item>
        <item>Rungpur</item>
        <item>Sylhet</item>
        <item>Dhaka</item>
        <item>Khulna</item>
        <item>Rajshahi</item>
        <item>Borishal</item>
        <item>Chittagong</item>
        <item>Rungpur</item>
        <item>Sylhet</item>
        <item>Dhaka</item>
        <item>Khulna</item>
        <item>Rajshahi</item>
        <item>Borishal</item>
        <item>Chittagong</item>
        <item>Rungpur</item>
        <item>Sylhet</item>
        <item>Dhaka</item>
        <item>Khulna</item>
        <item>Rajshahi</item>
        <item>Borishal</item>
        <item>Chittagong</item>
        <item>Rungpur</item>
        <item>Sylhet</item>
    </string-array>
    <string name="title_activity_google_map_list_fragment">Map</string>
    <string name="donorAddFragment_title">Become A Donor</string>
    <string name="donorAddFragment_lastDonateTitle">Last Donate</string>
    <string name="donorAddFragment_availableTitle">Available Status</string>
    <string name="donorAddFragment_availableStatus">Available for donating Blood</string>
    <string name="appInfo_details">\n \t\t\t The \'Blood Aid\' Blood Donor App puts the power to save lives in the palm of your hand. \n\n \t\t\tDonating blood, platelets and AB Plasma is easier than ever. \n\n \t\t\tFollow your blood’s journey from donation through delivery  (when possible), and create or join a lifesaving team and track its impact on a national leaderboard.\n\n</string>


</resources>
